float_eq/tests/derive_tests/float_eq/float_eq_enum.stderr
error: FloatEq may only be derived for structs.
 --> $DIR/float_eq_enum.rs:4:6
  |
4 | enum SomeEnum {
  |      ^^^^^^^^

error: FloatEqUlpsTol may only be derived for structs.
 --> $DIR/float_eq_enum.rs:4:6
  |
4 | enum SomeEnum {
  |      ^^^^^^^^
