float_eq/tests/derive_tests/float_eq/float_eq_enum.rs
use float_eq::{FloatEq, FloatEqUlpsTol};

#[derive(Clone, Copy, Debug, PartialEq, PartialOrd, FloatEqUlpsTol, FloatEq)]
enum SomeEnum {
    Float(f32),
    Double(f64),
}

fn main() {}
